feat: Created access Token to authorize methods

--- a/src/Challenge.Process.Aiq.WebApi/appsettings.Development.json
+++ b/src/Challenge.Process.Aiq.WebApi/appsettings.Development.json
@@ -5,6 +5,11 @@
   "ServicesAgents":{
     "ProductService":"https://fakestoreapi.com/"
   },
+  "Jwt": {
+    "Key": "Jx9vT3Zq1lK4r8nY5bW2eF7hQ0sM6dC3pA9uXzL7oR5tV8gN",
+    "Issuer": "http://localhost:5112",
+    "Audience": "http://localhost:5112"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
