--- a/src/Challenge.Process.Aiq.WebApi/appsettings.json
+++ b/src/Challenge.Process.Aiq.WebApi/appsettings.json
@@ -2,11 +2,18 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Username=user;Password=adm12345;Database=challenge"
   },
+  "ServicesAgents":{
+    "ProductService":"https://fakestoreapi.com/"
+  },
+  "Jwt": {
+    "Key": "Jx9vT3Zq1lK4r8nY5bW2eF7hQ0sM6dC3pA9uXzL7oR5tV8gN",
+    "Issuer": "http://localhost:5112",
+    "Audience": "http://localhost:5112"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
