--- a/src/Challenge.Process.Aiq.Services/Challenge.Process.Aiq.Services.csproj
+++ b/src/Challenge.Process.Aiq.Services/Challenge.Process.Aiq.Services.csproj
@@ -13,6 +13,8 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
+      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.1.2" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
     </ItemGroup>
 
 </Project>
