feat: Implemented new conditions to save and get user

--- a/src/Challenge.Process.Aiq.WebApi/Dockerfile
+++ b/src/Challenge.Process.Aiq.WebApi/Dockerfile
@@ -1,13 +1,16 @@
-﻿FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
+﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
-FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["src/Challenge.Process.Aiq.WebApi/Challenge.Process.Aiq.WebApi.csproj", "src/Challenge.Process.Aiq.WebApi/"]
+COPY ["src/Challenge.Process.Aiq.Domain/Challenge.Process.Aiq.Domain.csproj", "src/Challenge.Process.Aiq.Domain/"]
+COPY ["src/Challenge.Process.Aiq.EntityFramework/Challenge.Process.Aiq.EntityFramework.csproj", "src/Challenge.Process.Aiq.EntityFramework/"]
+COPY ["src/Challenge.Process.Aiq.Services/Challenge.Process.Aiq.Services.csproj", "src/Challenge.Process.Aiq.Services/"]
 RUN dotnet restore "src/Challenge.Process.Aiq.WebApi/Challenge.Process.Aiq.WebApi.csproj"
 COPY . .
 WORKDIR "/src/src/Challenge.Process.Aiq.WebApi"
